--- a/app/main.ipynb
+++ b/app/main.ipynb
@@ -2013,7 +2013,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# write your numpy code here\n",
+    "# write your numpy code here.\n",
     "my_list = np.array([6, 9, 12, 14, 17, 20])\n",
     "mask = (my_list % 2 == 0) & ((my_list % 3 == 0) | (my_list > 10))\n",
     "result_numpy = (my_list[mask] ^ 7) + 2\n",
